--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "react-snaplist-carousel": "^4.4.2",
     "redux-persist": "^6.0.0",
     "sass": "^1.58.0",
     "sort-by": "^1.2.0"
